--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.scss
@@ -12,3 +12,11 @@
 	}
 
 }
+::ng-deep .mat-horizontal-stepper-header{
+    pointer-events: none !important;
+}
+
+
+.appointmentInfoForm {
+	margin-left: 24px;
+}
