tg-1742 [MEJORA] Nuevo servicio para manejo de turnos

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -44,7 +44,7 @@
 					<mwl-calendar-week-view class="title-black"
 											*ngSwitchCase="'week'"
 											[viewDate]="viewDate"
-											[events]="events"
+											[events]="appointmentFacade.getAppointments() | async"
 											[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
 											[hourSegmentTemplate]="hourSegmentTemplate"
 											[headerTemplate]="headerTemplate"
@@ -59,7 +59,7 @@
 					<mwl-calendar-day-view class="title-black"
 										   *ngSwitchCase="'day'"
 										   [viewDate]="viewDate"
-										   [events]="events"
+										   [events]="appointmentFacade.getAppointments() | async"
 										   [hourSegments]="hourSegments"
 										   [hourSegmentTemplate]="hourSegmentTemplate"
 										   [dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
