--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/solve-problem/solve-problem.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/solve-problem/solve-problem.component.html
@@ -1,38 +1,59 @@
+<section id="resolver-problema" class="doc-section">
+	<app-document-section [sectionTitle]="'ambulatoria.paciente.problemas.TITLE_POPUP_RESOLVER_PROBLEMA'">
 
-<form (ngSubmit)="solveProblem()">
-	<div mat-dialog-title>
-		<h4 [translate]="'ambulatoria.paciente.problemas.TITLE_POPUP_RESOLVER_PROBLEMA'"></h4>
-	</div>
+		<div concept-form *ngIf="false else problemaForm">
+			<app-concepts-search *ngIf="!problemasNuevaConsultaService.getSnomedConcept() else problemaForm"
+								 [label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
+								 (search)="problemasNuevaConsultaService.openSearchDialog($event)">
+			</app-concepts-search>
+		</div>
 
-		<form [formGroup]="this.getForm()">
-			<div class="margin-checkbox" disabled>
-				<mat-checkbox id="cronico-checkbox" formControlName="cronico">
-					<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CRONICO'"></span>
-				</mat-checkbox>
-			</div>
+		<ng-template #problemaForm>
+			<form [formGroup]="this.getForm()" (ngSubmit)="solveProblem()">
 
-			<mat-form-field disabled appearance="outline">
-				<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO'"></mat-label>
-				<input matInput id="fecha_inicio" formControlName="fechaInicio" >
-				<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
-			</mat-form-field>
+				<mat-form-field appearance="outline">
+					<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"></mat-label>
+					<input class='name' id="snomed-input-new-consultation" matInput type="text" formControlName="snomed" readonly>
+				</mat-form-field>
 
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_FIN'"></mat-label>
-				<input matInput id="fecha_fin" formControlName="fechaFin" required>
-				<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
-				<mat-datepicker #finDatePicker></mat-datepicker>
-			</mat-form-field>
-		</form>
+				<mat-form-field appearance="outline" class="mat-form-field--no-underline">
+					<input class="input-checkbox-solve-problem" matInput placeholder="input" readonly>
+					<mat-checkbox id="cronico-checkbox" formControlName="cronico" class="checkbox" ng-readonly="true">
+							<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CRONICO'"></span>
+					</mat-checkbox>
+				</mat-form-field>
 
+				<mat-form-field appearance="outline" >
+					<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO'"></mat-label>
+					<input matInput id="fecha_inicio" formControlName="fechaInicio" readonly>
+				</mat-form-field>
 
-	<div mat-dialog-actions align="end">
-		<button mat-stroked-button color="primary" mat-dialog-close>
-			<span [translate]="'buttons.CANCEL'"></span>
-		</button>
-		<button mat-raised-button color="primary">
-			<span [translate]="'ambulatoria.paciente.problemas.CONFIRM_RESOLVER_PROBLEMA'"></span>
-		</button>
-	</div>
-</form>
+				<mat-form-field appearance="outline">
+					<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_FIN'">	</mat-label>
+					<input matInput id="fecha_fin" [matDatepicker]="finDatePicker" formControlName="fechaFin"
+						   (dateChange)="problemasNuevaConsultaService.checkValidFechaFin()">
+					<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
+					<mat-datepicker #finDatePicker></mat-datepicker>
+					<mat-error
+						*ngIf="problemasNuevaConsultaService.hasError('required', 'fechaFin')"
+						[translate]="'forms.REQUIRED'">
+					</mat-error>
+					<mat-error *ngIf="problemasNuevaConsultaService.hasError('min', 'fechaFin')"
+							   [translate]="'ambulatoria.paciente.nueva-consulta.problemas.errors.FECHA_FIN_MIN'">
+					</mat-error>
+				</mat-form-field>
 
+				<div class="buttons-solve-problem">
+					<button id="edit_problema" class="uppercase" mat-raised-button color="primary" type="submit" >
+						<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.buttons.SAVE'"></span>
+					</button>
+
+					<button mat-stroked-button color="primary" class="uppercase" [matDialogClose]="true">
+						<span [translate]="'buttons.CANCEL'"></span>
+					</button>
+				</div>
+
+			</form>
+		</ng-template>
+	</app-document-section>
+</section>
