tg-985 add ids a elementos html para automation test

--- a/front-end/webapp/src/app/modules/historia-clinica/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -7,10 +7,10 @@
 		</mat-card-content>
 		<mat-card-actions fxLayout="row-reverse" *ngIf="editable">
 			<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
-				<button mat-raised-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
+				<button mat-raised-button id="add_clinical_assestment_button" color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
 					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.ADD_CLINICAL_ASSESTMENT'"></span>
 				</button>
-				<button mat-raised-button color="primary" (click)="goToChangeMainDiagnosis()">
+				<button mat-raised-button id="change_main_diagnosis_button" color="primary" (click)="goToChangeMainDiagnosis()">
 					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.CHANGE'"></span>
 				</button>
 			</ng-container>
