--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/remove-diagnosis/remove-diagnosis.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/remove-diagnosis/remove-diagnosis.component.html
@@ -36,7 +36,7 @@
 			<button mat-stroked-button color="primary" cdkFocusInitial mat-dialog-close>
 				<span [translate]="'buttons.CANCEL'"></span>
 			</button>
-			<button mat-raised-button color="primary">
+			<button mat-raised-button color="primary" id="confirm_button">
 				<span [translate]="'internaciones.internacion-paciente.remove-diagnosis-dialog.CONFIRM_BUTTON'"></span>
 			</button>
 		</div>
