tg-1597 agrega control en FE para cuando el profesional puede o no asignar turnos

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -1,102 +1,104 @@
-<section class="turnos" id="calendar">
-			<ng-template #calendar>
+<div class="spinner" *ngIf="loading else calendar">
+	<mat-spinner color="primary"></mat-spinner>
+</div>
 
-				<div class="header" id="header" fxLayout="row" fxLayoutAlign="space-between center">
-					<mat-button-toggle-group>
-						<mat-button-toggle class="navigation"
-								mwlCalendarPreviousView
-								[view]=view
-								[(viewDate)]="viewDate"
-						>
-							Anterior
-						</mat-button-toggle>
-						<mat-button-toggle class="today"
-								mwlCalendarToday
-								[(viewDate)]="viewDate"
-						>
-							Hoy
-						</mat-button-toggle>
-						<mat-button-toggle class="navigation"
-								mwlCalendarNextView
-								[view]=view
-								[(viewDate)]="viewDate"
-						>
-							Próximo
-						</mat-button-toggle>
-					</mat-button-toggle-group>
+<ng-template #calendar>
+	<section class="turnos" id="calendar">
 
-					<div>
+
+		<div class="header" id="header" fxLayout="row" fxLayoutAlign="space-between center">
+			<mat-button-toggle-group>
+				<mat-button-toggle class="navigation"
+								   mwlCalendarPreviousView
+								   [view]=view
+								   [(viewDate)]="viewDate"
+				>
+					Anterior
+				</mat-button-toggle>
+				<mat-button-toggle class="today"
+								   mwlCalendarToday
+								   [(viewDate)]="viewDate"
+				>
+					Hoy
+				</mat-button-toggle>
+				<mat-button-toggle class="navigation"
+								   mwlCalendarNextView
+								   [view]=view
+								   [(viewDate)]="viewDate"
+				>
+					Próximo
+				</mat-button-toggle>
+			</mat-button-toggle-group>
+
+			<div>
 						<span
 							class="mat-h2">{{ viewDate | calendarDate:(view + 'ViewTitle'): undefined : MONDAY }}</span>
-					</div>
-
-					<div>
-						<mat-button-toggle-group class="toggle-view" [(value)]="view">
-							<mat-button-toggle value="{{calendarViewEnum.Week}}">Semana</mat-button-toggle>
-							<mat-button-toggle value="{{calendarViewEnum.Day}}">Día</mat-button-toggle>
-						</mat-button-toggle-group>
-					</div>
-
-				</div>
-
-				<div [ngSwitch]="view">
-
-					<mwl-calendar-week-view class="title-black"
-											*ngSwitchCase="'week'"
-											[viewDate]="viewDate"
-											[events]="appointmentFacade.getAppointments() | async"
-											[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
-											[hourSegmentTemplate]="hourSegmentTemplate"
-											[headerTemplate]="headerTemplate"
-											[hourSegments]="hourSegments"
-											[weekStartsOn]="MONDAY"
-											(beforeViewRender)="loadCalendar($event)"
-											(hourSegmentClicked)="onClickedSegment($event)"
-											(eventClicked)="viewAppointment($event.event)"
-					>
-					</mwl-calendar-week-view>
-
-					<mwl-calendar-day-view class="title-black"
-										   *ngSwitchCase="'day'"
-										   [viewDate]="viewDate"
-										   [events]="appointmentFacade.getAppointments() | async"
-										   [hourSegments]="hourSegments"
-										   [hourSegmentTemplate]="hourSegmentTemplate"
-										   [dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
-										   (beforeViewRender)="loadCalendar($event)"
-										   (hourSegmentClicked)="onClickedSegment($event)"
-										   (eventClicked)="viewAppointment($event.event)"
-					>
-					</mwl-calendar-day-view>
-				</div>
-
-			</ng-template>
-
-			<div class="spinner" *ngIf="loading else calendar">
-				<mat-spinner color="primary"></mat-spinner>
 			</div>
 
-			<ng-template #hourSegmentTemplate let-segment="segment" let-locale="locale"
-						 let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
-				<div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
-					 [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
-					 [ngClass]="segment.cssClass">
-					<div class="cal-time" *ngIf="isTimeLabel">
-						{{ segment.date | calendarDate:'weekViewHour':locale }}
-					</div>
-				</div>
-			</ng-template>
+			<div>
+				<mat-button-toggle-group class="toggle-view" [(value)]="view">
+					<mat-button-toggle value="{{calendarViewEnum.Week}}">Semana</mat-button-toggle>
+					<mat-button-toggle value="{{calendarViewEnum.Day}}">Día</mat-button-toggle>
+				</mat-button-toggle-group>
+			</div>
 
-			<ng-template #headerTemplate let-days="days" let-locale="locale">
-				<div class="cal-day-headers">
-					<div style="cursor: pointer" class="cal-header" (click)="goToDayViewOn(day.date)" *ngFor="let day of days">
-						<strong>
-							{{ day.date | calendarDate:'weekViewColumnHeader':locale | titlecase}}
-						</strong>
-						<br>
-						<span> {{ day.date | calendarDate: 'weekViewColumnSubHeader'}}</span>
-					</div>
-				</div>
-			</ng-template>
+		</div>
 
-</section>
+		<div [ngSwitch]="view">
+
+			<mwl-calendar-week-view class="title-black"
+									*ngSwitchCase="'week'"
+									[viewDate]="viewDate"
+									[events]="appointmentFacade.getAppointments() | async"
+									[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
+									[hourSegmentTemplate]="hourSegmentTemplate"
+									[headerTemplate]="headerTemplate"
+									[hourSegments]="hourSegments"
+									[weekStartsOn]="MONDAY"
+									(beforeViewRender)="loadCalendar($event)"
+									(hourSegmentClicked)="onClickedSegment($event)"
+									(eventClicked)="viewAppointment($event.event)"
+			>
+			</mwl-calendar-week-view>
+
+			<mwl-calendar-day-view class="title-black"
+								   *ngSwitchCase="'day'"
+								   [viewDate]="viewDate"
+								   [events]="appointmentFacade.getAppointments() | async"
+								   [hourSegments]="hourSegments"
+								   [hourSegmentTemplate]="hourSegmentTemplate"
+								   [dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
+								   (beforeViewRender)="loadCalendar($event)"
+								   (hourSegmentClicked)="onClickedSegment($event)"
+								   (eventClicked)="viewAppointment($event.event)"
+			>
+			</mwl-calendar-day-view>
+		</div>
+
+
+		<ng-template #hourSegmentTemplate let-segment="segment" let-locale="locale"
+					 let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
+			<div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
+				 [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
+				 [ngClass]="segment.cssClass">
+				<div class="cal-time" *ngIf="isTimeLabel">
+					{{ segment.date | calendarDate:'weekViewHour':locale }}
+				</div>
+			</div>
+		</ng-template>
+
+		<ng-template #headerTemplate let-days="days" let-locale="locale">
+			<div class="cal-day-headers">
+				<div style="cursor: pointer" class="cal-header" (click)="goToDayViewOn(day.date)"
+					 *ngFor="let day of days">
+					<strong>
+						{{ day.date | calendarDate:'weekViewColumnHeader':locale | titlecase}}
+					</strong>
+					<br>
+					<span> {{ day.date | calendarDate: 'weekViewColumnSubHeader'}}</span>
+				</div>
+			</div>
+		</ng-template>
+
+	</section>
+</ng-template>
