--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.scss
@@ -13,11 +13,13 @@ div.spinner {
 
 			.bg-green {
 				background-color: #C9E7CB !important;
-				cursor: pointer;
 			}
 
 			.bg-blue {
 				background-color: #92C3E2 !important;
+			}
+
+			.cursor-pointer {
 				cursor: pointer;
 			}
 
