--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -19,7 +19,9 @@
 			<app-document-section [sectionTitle]="'internaciones.anamnesis.procedimientos.TITLE'"
 				[tableTitle]="'internaciones.anamnesis.procedimientos.TABLE_TITLE'"
 				[columns]="procedimientosService.getColumns()"
-				[data]="procedimientosService.getProcedimientos()">
+				[data]="procedimientosService.getProcedimientos()"
+				[addRemoveColumn]="true"
+				(removeColumn)="procedimientosService.remove($event)">
 				<ng-container concept-form>
 					<app-concepts-search
 						*ngIf="!procedimientosService.getSnomedConcept() else procedimientoForm"
@@ -45,7 +47,7 @@
 								<mat-label [translate]="'internaciones.anamnesis.procedimientos.FECHA'">
 								</mat-label>
 								<input matInput id="fecha_procedimiento" [matDatepicker]="datePicker"
-									formControlName="fecha" [max]="procedimientosService.getFechaMax()">
+									formControlName="performedDate" [max]="procedimientosService.getFechaMax()">
 								<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
 								<mat-datepicker #datePicker></mat-datepicker>
 							</mat-form-field>
