--- a/front-end/webapp/src/app/modules/presentation/components/document-section/document-section.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/document-section/document-section.component.html
@@ -15,7 +15,15 @@
 			<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
 		</ng-container>
 
-		<!--todo agregar remove-->
+		<ng-container matColumnDef="remove">
+			<th mat-header-cell *matHeaderCellDef></th>
+			<td mat-cell class="actions" *matCellDef="let element; index as i">
+				<button type="button" mat-icon-button color="warn" (click)="removeColumn.emit(i)">
+					<mat-icon>delete_outline</mat-icon>
+				</button>
+			</td>
+		</ng-container>
+
 
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
