tg-1814 Corrige label de otros apellidos en Busqueda de pacientes
(cherry picked from commit 1376f9f1456aa92858903535724675ae818e82fe)

--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -100,7 +100,7 @@
 						<input  id="otherLastNames"
 								maxlength="20"
 								formControlName="otherLastNames"
-								placeholder="{{'pacientes.form.MOTHERS_LAST_NAME' | translate}}"
+								placeholder="{{'pacientes.form.OTHER_LAST_NAMES' | translate}}"
 								matInput>
 					</mat-form-field>
 				</div>
